--- a/PycharmProjects/test/jupyter_test.ipynb
+++ b/PycharmProjects/test/jupyter_test.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,8 @@
       "[[0.7 0.2]\n",
       " [4.  6. ]]\n",
       "[[0.07 0.02]\n",
-      " [0.2  0.3 ]]\n"
+      " [0.2  0.3 ]]\n",
+      "0.7\n"
      ]
     }
    ],
@@ -243,7 +244,8 @@
     "print(matA*matB) # 变成了矩阵乘法运算\n",
     "print(np.multiply(matA,matB)) # 仍然是对应位置相乘\n",
     "\n",
-    "print(0.1*matA)"
+    "print(0.1*matA)\n",
+    "print(A[0][0])"
    ]
   },
   {
@@ -293,6 +295,26 @@
     "print(R1)\n",
     "print(R2)\n",
     "print(R1+R2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.7  0.2  0.5  0.44]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[0.7,0.2,0.5,0.44]])\n",
+    "B = np.array([[0.7,0.2,0.5,0.44]])\n",
+    "assert A.shape == B.shape\n",
+    "print(A[0])"
    ]
   },
   {
