日常代码更新

--- a/PycharmProjects/test/jupyter_test.ipynb
+++ b/PycharmProjects/test/jupyter_test.ipynb
@@ -319,6 +319,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.]\n",
+      " [5.]]\n",
+      "[[ 0.   0.6  0.8]\n",
+      " [-0.6  0.   0.8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Normalizing rows 规范化行向量，规范化可以使得所有值的取值在（-1，1）之间，方便梯度递减的更快\n",
+    "A = np.array([[0,3,4],[-3,0,4]])\n",
+    "B = np.linalg.norm(A,axis=1,keepdims=True)\n",
+    "C = A/B\n",
+    "print(B)\n",
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
