DNN神经网络完整模型封装

--- a/PycharmProjects/test/jupyter_test.ipynb
+++ b/PycharmProjects/test/jupyter_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -340,6 +340,29 @@
     "C = A/B\n",
     "print(B)\n",
     "print(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1 0 1 5]\n",
+      " [2 5 7 6 8]\n",
+      " [3 1 4 7 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[0,1,0,1,5],\n",
+    "              [2,5,7,6,8],\n",
+    "              [3,1,4,7,6]])\n",
+    "AX_23 = np.zer\n",
+    "print(A)"
    ]
   },
   {
