日常代码更新

--- a/MyAiProject/PyTrochProject/0ATest.ipynb
+++ b/MyAiProject/PyTrochProject/0ATest.ipynb
@@ -2030,6 +2030,209 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "tensor([[-0.5466, -1.0194, -0.3357],\n",
+      "        [-0.6542, -0.0847,  0.2539],\n",
+      "        [ 0.4246,  0.5816, -0.3865],\n",
+      "        [ 1.1795,  0.2402, -0.3308],\n",
+      "        [-0.5970, -1.8826,  2.3186]], requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# filter 测试:过滤出那些requires_grad为true的tensor\n",
+    "A = torch.randn(5,3,requires_grad=True)\n",
+    "print(A.requires_grad)\n",
+    "B = torch.randn(3,2,requires_grad=False)\n",
+    "print(B.requires_grad)\n",
+    "filterC = filter(lambda x:x.requires_grad,[A,B])\n",
+    "print(iter(filterC).__next__())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-1., -1.,  0.,  2.,  1.],\n",
+      "        [-1., -1.,  0.,  2.,  1.],\n",
+      "        [-1., -1.,  0.,  2.,  1.]], requires_grad=True)\n",
+      "tensor([3, 1, 4])\n",
+      "tensor(5.4152, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cross_entropy 测试\n",
+    "#[seq_len,ont_hot_embedding_size] [句子中有三个词，ont_hot_embedding_size为5] ;这些都是最原始的全连接输出的值\n",
+    "predict = torch.tensor([[-1, -1, 0,  2, 1],\n",
+    "        [-1, -1, 0,  2, 1],\n",
+    "        [-1, -1, 0,  2, 1]],dtype=torch.float32,requires_grad=True)\n",
+    "print(predict)\n",
+    "\n",
+    "\n",
+    "# target = torch.randint(5,(3,),dtype=torch.int64) # tensor([0, 1, 4]) # 5代表ont_hot_embedding_size，3代表seq_len\n",
+    "# target的维度会比predict少一维，因为target直接用数字表示了one-hot对应的位置\n",
+    "target = torch.tensor([3, 1, 4],dtype=torch.int64) # 3, 1, 4分别对应词表中的第4, 2, 5位置上的词\n",
+    "print(target)\n",
+    "\n",
+    "# cross_entropy 会先进行log_softmax求出\n",
+    "loss = torch.functional.F.cross_entropy(predict,target,reduction='mean') # mean是平均loss\n",
+    "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.032058604\n",
+      "0.087144315\n",
+      "0.2368828\n",
+      "0.6439142\n",
+      "==========================\n",
+      "-5.320569\n",
+      "-1.773523\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 对上面的计算进行手动的求cross_entropy\n",
+    "# 先求对数值\n",
+    "en1 = np.exp(-1,dtype=np.float32) # 0.36787944117144233\n",
+    "e0 = np.exp(0,dtype=np.float32) # 1.0\n",
+    "e1 = np.exp(1,dtype=np.float32) # 2.718281828459045\n",
+    "e2 = np.exp(2,dtype=np.float32) # 7.38905609893065\n",
+    "# 对数加和\n",
+    "sum_e = en1 + e0 + e1+ e2 # 11.475217368561138\n",
+    "# 求softmax的概率\n",
+    "pen1 = np.divide(en1,sum_e,dtype=np.float32) # 0.03205860328008499\n",
+    "print(pen1)\n",
+    "pe0 =  np.divide(e0,sum_e,dtype=np.float32)  # 0.08714431874203257\n",
+    "print(pe0)\n",
+    "pe1 = np.divide(e1,sum_e,dtype=np.float32)  # 0.23688281808991013\n",
+    "print(pe1)\n",
+    "pe2 = np.divide(e2,sum_e,dtype=np.float32) # 0.6439142598879724\n",
+    "print(pe2)\n",
+    "\n",
+    "print(\"==========================\")\n",
+    "# 3, 1, 4位置分别代表了pe2，pen1，pe1的值\n",
+    "log_sum = np.log(pe2,dtype=np.float32)+np.log(pen1,dtype=np.float32)+np.log(pe1,dtype=np.float32)\n",
+    "print(log_sum)\n",
+    "log_sum_mean = np.divide(log_sum,3,dtype=np.float32)\n",
+    "print(log_sum_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0.0841, -0.5210,  0.9787],\n",
+      "        [-0.9357,  0.0630,  0.6080],\n",
+      "        [ 0.1092,  0.4593, -0.7256],\n",
+      "        [ 1.6098, -0.1594, -0.2879],\n",
+      "        [-2.5540, -0.4800, -1.1671]])\n",
+      "tensor([ 0.0841, -0.5210,  0.9787, -0.9357,  0.0630,  0.6080,  0.1092,  0.4593,\n",
+      "        -0.7256,  1.6098, -0.1594, -0.2879, -2.5540, -0.4800, -1.1671])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# view(-1) 测试\n",
+    "A = torch.randn(5,3)\n",
+    "print(A)\n",
+    "print(A.view(-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 0.0976, -1.8255],\n",
+      "         [ 0.1194, -0.7030],\n",
+      "         [-1.5159,  1.4731]],\n",
+      "\n",
+      "        [[ 0.0549, -1.5263],\n",
+      "         [-0.1463, -1.8223],\n",
+      "         [-0.4064,  0.5603]],\n",
+      "\n",
+      "        [[ 0.3360,  1.8366],\n",
+      "         [ 1.0848, -0.3860],\n",
+      "         [ 1.4632, -0.8524]],\n",
+      "\n",
+      "        [[ 0.2769, -0.9465],\n",
+      "         [-0.3930,  1.2240],\n",
+      "         [-1.3663,  0.2402]],\n",
+      "\n",
+      "        [[-0.3528, -1.3213],\n",
+      "         [ 0.3954, -1.2281],\n",
+      "         [-0.3469, -0.6532]]])\n",
+      "tensor([[[ 0.0976, -1.8255],\n",
+      "         [ 0.1194, -0.7030]],\n",
+      "\n",
+      "        [[ 0.0549, -1.5263],\n",
+      "         [-0.1463, -1.8223]],\n",
+      "\n",
+      "        [[ 0.3360,  1.8366],\n",
+      "         [ 1.0848, -0.3860]],\n",
+      "\n",
+      "        [[ 0.2769, -0.9465],\n",
+      "         [-0.3930,  1.2240]],\n",
+      "\n",
+      "        [[-0.3528, -1.3213],\n",
+      "         [ 0.3954, -1.2281]]])\n",
+      "tensor([[[-0.5264,  1.2036]],\n",
+      "\n",
+      "        [[-1.6966, -0.5756]],\n",
+      "\n",
+      "        [[ 1.2386,  1.0165]],\n",
+      "\n",
+      "        [[ 1.3282,  0.0920]],\n",
+      "\n",
+      "        [[ 0.5388, -0.6176]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [:,1:] 操作是把第二维度的索引位置为0位置的那个值去掉，因为这是预测下一个值\n",
+    "A = torch.randn(5,3,2)\n",
+    "print(A)\n",
+    "\n",
+    "trainB = A[:,:-1] # decoder训练的时候不需要最后一个词\n",
+    "print(trainB)\n",
+    "\n",
+    "goldB = A[:,1:] # 维度1不变，维度2从1开始(相当于维度2去掉了第一组数) # loss回归的时候需要用的taget去掉第一个位置的词\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
